ensure navbar always visible

--- a/src/components/navbar/style.styl
+++ b/src/components/navbar/style.styl
@@ -9,7 +9,7 @@
     overflow: hidden
     user-select: none
     width: 100%
-    z-index: 10
+    z-index: 20
 
     & > *
         flex: 0
